objects/ssot__CaseEpisode__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Address__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisodeStatus__c</fullName>
        <label>Case Episode Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisodeSubType__c</fullName>
        <label>Case Episode Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisodeType__c</fullName>
        <label>Case Episode Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisode_Address_map_Address_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_Address_map_Address_Id_N_1</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_Address_map_Address_Id_N_1</relationshipLabel>
        <relationshipName>CaseEpisode_Address_map_Address_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisode_Case_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_Case_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_Case_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseEpisode_Case_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CaseEpisode_SubjectId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_SubjectId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_SubjectId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>CaseEpisode_SubjectId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Case__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EpisodeAccountId__c</fullName>
        <label>Episode Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EpisodeReason__c</fullName>
        <label>Episode Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Episode Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedEpisodeId__c</fullName>
        <label>Related Episode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StatusChangeReason__c</fullName>
        <label>Status Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543581505_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_EpisodeAccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_EpisodeAccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1718543581505_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544757905_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_SubjectId_map_AccountCon_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_SubjectId_map_AccountCon_rel</relationshipLabel>
        <relationshipName>rel_1718544757905_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549025497_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseEpisode_EpisodeReason_map_CasePr_rel</label>
        <referenceTo>ssot__CaseProceedingResult__dlm</referenceTo>
        <relationshipLabel>CaseEpisode_EpisodeReason_map_CasePr_rel</relationshipLabel>
        <relationshipName>rel_1718549025497_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>